--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,48 +2,23 @@
     "@@locale": "en",
     "@____________________TOP____________________": {},
     "home": "Home",
+    "synchronize": "Synchronize",
+    "synchronizeDetails": "Get the latest from Twitter",
+    "deleteLastSynchronize": "Delete last synchronize",
+    "deleteLastSynchronizeDetails": "If the last synchronization was interrupted",
     "@____________________DRAWER____________________": {},
-    "logout": "logout",
-    "close": "close",
-    "setting": "setting",
-    "help": "help",
+    "close": "Close",
+    "setting": "Setting",
+    "logout": "Logout",
     "@____________________DATE____________________": {},
-    "dateFormat1": "{inMonth}m{inDays}d",
-    "dateFormat2": "{inDays}d{inHours}h",
-    "dateFormat3": "{inHours}h{inMinutes}m",
-    "dateFormat4": "{inMinutes}m",
-    "dateFormat5": "{inSeconds}s",
+    "dateFormat1": "MM/dd/yy",
+    "dateFormat2": "MM/dd",
+    "oneMonth": "1 Month",
+    "threeMonths": "3 Months",
+    "oneYear": "1 Year",
+    "totalPeriod": "Total Period",
     "@____________________HELP____________________": {},
-    "license": "license",
-    "licenseDetails": "View licence",
-    "@____________________PLACEHOLDER____________________": {},
-    "@__PLACEHOLDER_DATE__": {},
-    "@dateFormat1": {
-        "placeholders": {
-            "inMonth": {},
-            "inDays": {}
-        }
-    },
-    "@dateFormat2": {
-        "placeholders": {
-            "inDays": {},
-            "inHours": {}
-        }
-    },
-    "@dateFormat3": {
-        "placeholders": {
-            "inHours": {},
-            "inMinutes": {}
-        }
-    },
-    "@dateFormat4": {
-        "placeholders": {
-            "inMinutes": {}
-        }
-    },
-    "@dateFormat5": {
-        "placeholders": {
-            "inSeconds": {}
-        }
-    }
+    "@____________________ERROR____________________": {},
+    "error": "error",
+    "@____________________PLACEHOLDER____________________": {}
 }
