--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,7 @@
 {
     "@@locale": "en",
+    "@____________________CONTRIBUTOR____________________": {},
+    "contributor": "fa0311",
     "@____________________TOP____________________": {},
     "home": "Home",
     "synchronize": "Synchronize",
@@ -18,6 +20,19 @@
     "oneYear": "1 Year",
     "totalPeriod": "Total Period",
     "@____________________HELP____________________": {},
+    "@____________________SETTING____________________": {},
+    "@__ACCESSIBILITY__": {},
+    "accessibility": "Accessibility",
+    "language": "Language",
+    "translatorDetails": "Translated by {name}",
+    "deviceLightTheme": "If the device is light theme",
+    "deviceDarkTheme": "If the device is dark theme",
+    "lightTheme": "Light theme",
+    "darkTheme": "Dark theme",
+    "blackTheme": "Black theme",
+    "trueBlackTheme": "True black theme",
+    "highContrastLightTheme": "High contrast light theme",
+    "highContrastDarkTheme": "High contrast dark theme",
     "@____________________ERROR____________________": {},
     "error": "error",
     "@____________________PLACEHOLDER____________________": {}
