add confirm dialog
Signed-off-by: ふぁ <yuki@yuki0311.com>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,6 +9,8 @@
   "deleteLastSynchronize": "Delete last synchronize",
   "deleteLastSynchronizeDetails": "If the last synchronization was interrupted",
   "noData": "No data",
+  "confirm": "Confirm",
+  "ok": "OK",
   "@____________________DRAWER____________________": {},
   "close": "Close",
   "setting": "Setting",
