--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,6 +17,7 @@
   "close": "Close",
   "setting": "Setting",
   "logout": "Logout",
+  "logoutConfirm": "Are you sure you want to logout?",
   "@____________________DATE____________________": {},
   "dateFormat1": "MM/dd/yy H:mm",
   "dateFormat2": "MM/dd",
@@ -29,6 +30,7 @@
   "apiLimitDetails": "API limit reached, retry in {sec} seconds.",
   "syncAlert": "Synchronization is in progress. Please wait without closing the application.",
   "syncSuccess": "Synchronization completed successfully.",
+  "syncCancelConfirm": "Are you sure you want to cancel the synchronization?",
   "@____________________HELP____________________": {},
   "help": "Help",
   "contribution": "Contribution",
