--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,6 +13,10 @@
   "noData": "No data",
   "confirm": "Confirm",
   "ok": "OK",
+  "cancel": "Cancel",
+  "save": "Save",
+  "@____________________DIFF____________________": {},
+  "viewWeb": "View web",
   "@____________________DRAWER____________________": {},
   "close": "Close",
   "setting": "Setting",
@@ -48,6 +52,8 @@
   "@__ACCESSIBILITY__": {},
   "accessibility": "Accessibility",
   "account": "Account",
+  "twitterAccountPrefix": "@",
+  "accountId": "Account ID",
   "language": "Language",
   "translatorDetails": "Translated by {name}",
   "deviceLightTheme": "If the device is light theme",
