--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,1 +1,86 @@
-{}
+{
+  "@@locale": "ja",
+  "@____________________CONTRIBUTOR____________________": {},
+  "contributor": "fa0311",
+  "@____________________TOP____________________": {},
+  "home": "ホーム",
+  "unfollowed": "フォロー解除",
+  "unfollowedUsersList": "フォロー解除されたユーザーリスト",
+  "synchronize": "同期",
+  "synchronizeDetails": "最新の情報をTwitterから取得します",
+  "deleteLastSynchronize": "最後の同期を削除",
+  "deleteLastSynchronizeDetails": "前回の同期が中断された場合",
+  "noData": "データがありません",
+  "confirm": "続行",
+  "ok": "決定",
+  "cancel": "キャンセル",
+  "save": "保存",
+  "@____________________DIFF____________________": {},
+  "viewWeb": "Webで表示",
+  "@____________________DRAWER____________________": {},
+  "close": "閉じる",
+  "setting": "設定",
+  "logout": "ログアウト",
+  "logoutConfirm": "本当にログアウトしますか？",
+  "@____________________DATE____________________": {},
+  "dateFormat1": "yy/MM/dd H:mm",
+  "dateFormat2": "MM/dd",
+  "oneMonth": "1ヶ月",
+  "threeMonths": "3ヶ月",
+  "oneYear": "1年",
+  "totalPeriod": "全期間",
+  "@____________________SYNC____________________": {},
+  "apiLimit": "APIリミット！",
+  "apiLimitDetails": "APIリミットに到達しました {sec} 秒後に再試行します",
+  "syncAlert": "同期中です。アプリケーションを終了せずにお待ちください",
+  "syncSuccess": "同期が正常に完了しました",
+  "syncCancelConfirm": "本当に同期をキャンセルしますか？",
+  "@____________________HELP____________________": {},
+  "help": "ヘルプ",
+  "contribution": "貢献",
+  "contributionDetails": "Githubでの開発に貢献する",
+  "reportDetails": "開発者にバグの報告や新機能のリクエストをします",
+  "developerInfo": "開発者情報",
+  "developerInfoDetails": "開発者の情報を表示",
+  "rateTheApp": "評価",
+  "rateTheAppDetails": "GooglePlayStoreでの評価をお願いします",
+  "version": "バージョン",
+  "versionDetails": "現在のバージョン: {version}",
+  "license": "License",
+  "licenseDetails": "License情報を確認します",
+  "@____________________SETTING____________________": {},
+  "@__ACCESSIBILITY__": {},
+  "accessibility": "アクセシビリティ",
+  "account": "アカウント",
+  "twitterAccountPrefix": "@",
+  "accountId": "アカウントID",
+  "language": "言語",
+  "translatorDetails": "{name}による翻訳",
+  "deviceLightTheme": "端末がライトテーマの時",
+  "deviceDarkTheme": "端末がダークテーマの時",
+  "lightTheme": "ライトテーマ",
+  "darkTheme": "ダークテーマ",
+  "blackTheme": "ブラックテーマ",
+  "trueBlackTheme": "真っ黒テーマ",
+  "highContrastLightTheme": "ハイコントラストライトテーマ",
+  "highContrastDarkTheme": "ハイコントラストダークテーマ",
+  "@____________________ERROR____________________": {},
+  "error": "エラー",
+  "@____________________REPORT____________________": {},
+  "report": "報告",
+  "log": "ログ",
+  "viewDetailedLogs": "詳細なログを表示",
+  "@____________________PLACEHOLDER____________________": {},
+  "@__SYNC__": {},
+  "@apiLimitDetails": {
+    "placeholders": {
+      "sec": {}
+    }
+  },
+  "@__HELP__": {},
+  "@versionDetails": {
+    "placeholders": {
+      "version": {}
+    }
+  }
+}
