--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -56,14 +56,10 @@
   "accountId": "アカウントID",
   "language": "言語",
   "translatorDetails": "{name}による翻訳",
-  "deviceLightTheme": "端末がライトテーマの時",
-  "deviceDarkTheme": "端末がダークテーマの時",
+  "theme": "テーマ",
   "lightTheme": "ライトテーマ",
   "darkTheme": "ダークテーマ",
-  "blackTheme": "ブラックテーマ",
-  "trueBlackTheme": "真っ黒テーマ",
-  "highContrastLightTheme": "ハイコントラストライトテーマ",
-  "highContrastDarkTheme": "ハイコントラストダークテーマ",
+  "system": "システム",
   "@____________________ERROR____________________": {},
   "error": "エラー",
   "@____________________REPORT____________________": {},
