--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -66,6 +66,16 @@
   "report": "報告",
   "log": "ログ",
   "viewDetailedLogs": "詳細なログを表示",
+  "@____________________component/widget/error_log_view.dart____________________": {},
+  "errorCancelMessage": "通信がキャンセルされました",
+  "errorReceiveTimeoutMessage": "通信がタイムアウトしました",
+  "errorSendTimeoutMessage": "通信がタイムアウトしました",
+  "errorConnectionTimeoutMessage": "通信がタイムアウトしました",
+  "errorBadCertificateMessage": "証明書のエラーが発生しました",
+  "errorBadResponseMessage": "エラーが発生しました",
+  "errorConnectionErrorMessage": "通信エラーが発生しました",
+  "errorReportButton": "エラーを報告する",
+  "errorUnknownMessage": "不明なエラーが発生しました",
   "@____________________PLACEHOLDER____________________": {},
   "@__SYNC__": {},
   "@apiLimitDetails": {
