--- a/lib/i18n/app.i18n.yaml
+++ b/lib/i18n/app.i18n.yaml
@@ -29,6 +29,7 @@ help:
     description: ライセンス情報を表示する
 
 home:
+  title: ホーム
   totalPeriod: 全期間
   oneMonth: 1ヶ月
   threeMonths: 3ヶ月
@@ -40,8 +41,8 @@ home:
       title: 同期の解除
       description: 同期を解除します
     permission:
-      title: 同期の許可
-      description: 同期を許可します
+      title: 権限の許可
+      description: 権限を許可します
       success: 権限が付与されています
       failure: 権限が付与されていません
 
@@ -52,6 +53,7 @@ login:
     - 不正な操作を疑われる可能性が高いため、サブアカウントでログインすることを推奨します。
 
 result:
+  title: 情報
   empty:
     title: 同期データがありません
     description: ホームの同期ボタンを押して同期してください
@@ -66,8 +68,8 @@ result:
       B: "𝐵"
     operator: 演算子
     operatorTypeText(context=OperatorType):
-      intersection: "和"
-      union: "積"
+      intersection: "積"
+      union: "和"
       difference: "差"
       symmetricDifference: "対称差"
     operatorTypeMath(context=OperatorType):
@@ -109,6 +111,7 @@ result:
     sortType(context=SortType):
       asc: 昇順
       desc: 降順
+    viewWeb: Webで表示
 
   follow:
     title: フォロー
@@ -138,3 +141,76 @@ result:
     title: フォロワー解除
     description: 最近フォロー解除されたユーザー
   detailConfig: 詳細設定
+
+setting:
+  title: 設定
+  accessibility:
+    title: アクセシビリティ
+  account:
+    title: アカウント
+  logout:
+    title: ログアウト
+    confirm: ログアウトしますか？
+    ok: 決定
+  help:
+    title: ヘルプ
+
+setup:
+  title: アカウント
+  accountId: アカウントID
+  save: 保存
+synchronize:
+  title: 同期
+  notificationTitle:
+    - 同期中
+    - 同期中.
+    - 同期中..
+    - 同期中...
+  notification:
+    text: "同期の開始中です"
+    text1: "フォロー: ${count}/${total}"
+    text2: "フォロワー: ${count}/${total}"
+  channel:
+    name: Twitter同期チャンネル
+    description: Twitterの情報を取得するためのチャンネル
+  apiLimit:
+    title: API制限
+    description: APIリミットに到達しました ${sec} 秒後に再試行します
+  success: 同期が正常に完了しました
+  alert:
+    title: 同期中です
+    description: アプリを切り替えるとバックグラウンドで同期を続行します
+  warning:
+    title: 同期中です
+    description: アプリを切り替えたり画面を消灯しないでください
+  close: 閉じる
+  cancel: キャンセル
+  finish:
+    title: 同期完了
+    description: 同期が完了しました
+
+router:
+  notice: アプリのアップデートがあります
+  check: 確認
+
+error:
+  dioExceptionType(context=DioExceptionType):
+    connectionTimeout: サーバーとの接続がタイムアウトしました
+    sendTimeout: リクエストがタイムアウトしました
+    receiveTimeout: レスポンスがタイムアウトしました
+    badCertificate: 証明書が無効です
+    badResponse: 不正なレスポンスが返されました
+    cancel: リクエストがキャンセルされました
+    connectionError: インターネット接続がありません
+    unknown: 不明なエラーが発生しました
+  unknown: 不明なエラーが発生しました
+  report: エラーを報告する
+
+chart:
+  noData: データがありません
+  date1: yy/MM/dd H:mm
+  date2: MM/dd
+
+drawer:
+  close: 閉じる
+  setting: 設定
