--- a/lib/i18n/app_ja.i18n.yaml
+++ b/lib/i18n/app_ja.i18n.yaml
@@ -157,7 +157,11 @@ setting:
 
 setup:
   title: アカウント
+  description:
+    - 実際に管理するTwitterのアカウントのIDを入力してください
+    - ログインしたアカウントと異なるアカウントを入力することもできます
   accountId: アカウントID
+  accountHint: elonmusk
   save: 保存
 synchronize:
   title: 同期
